Limpeza del codigo con sonarQube y mejora de la logica de los Controllers